--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "imgur": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
