--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "sharp": "^0.30.4",
     "tslib": "^2.4.0",
     "validator": "^13.7.0"
   }
