--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "cross-env NODE_ENV=dev nodemon ./bin/www",
     "preview": "cross-env NODE_ENV=production nodemon ./bin/www"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
