--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "mongoose": "^6.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.30.4",
     "tslib": "^2.4.0",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
 }
